Add a guard to prevent an infinite loop in arc notification

In some case, an infinite loop happens in ArcNotificationContent::
UpdateControlButtonVisiblity() method.
The logic is: UpdateControlButtonsVisiblity() tries hiding the control
buttons, it generates a mouse exit event, and the event handler calls
UpdateControlButtonsVisibility.

To prevent that, this patch adds the flag to prevent the calling the
method during the method.

Bug: 771084
Test: manual
Change-Id: I03f9d5c00eb3c7f39bebebec03bfeb51616ca925
Reviewed-on: https://chromium-review.googlesource.com/697406
Reviewed-by: Yuichiro Hanada <yhanada@chromium.org>
Reviewed-by: Eliot Courtney <edcourtney@chromium.org>
Commit-Queue: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506715}
Former-commit-id: 88a32c820aea50c2f4adf0bb86a64b64a9f36e07